# OmicsDS

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/scripts/: build_dockers.sh  clang_format.sh  install_prereqs.sh  print_test_log.sh  readme_test.sh
.github/workflows/: R.yml  basic.yml  docker.yml  docs.yml  python.yml  release.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/omicsds/: __init__.py  api.pxd  api.pyi  api.pyx
bindings/python/requirements/: dev.txt  prod.txt
bindings/python/scripts/: dev_build.sh  install_from_aws_codeartifact.sh  lint_sources.sh
bindings/python/src/_processor/: omicsds_processor.cc  omicsds_processor.h
bindings/python/tests/: conftest.py  test_bindings.py
bindings/python/tests/inputs/: omicsds_output_by_feature.json  omicsds_output_by_sample.json  omicsds_output_by_sample_with_map.json
bindings/r/: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  build.sh  cleanup  configure  configure.ac  install_R_prereqs.sh
bindings/r/R/: RcppExports.R  omicsds-package.R
bindings/r/man/: connect.Rd  disconnect.Rd  omicsds-package.Rd  query_features.Rd  version.Rd
bindings/r/src/: Makevars.in  RcppExports.cpp  omicsds_query.cpp  omicsds_types.h  rcpp_hello_world.cpp
bindings/r/tests/: testthat.R
bindings/r/tests/testthat/: test.R
bindings/r/vignettes/: omicds.Rmd  omicsds.Rmd
cmake/Modules/: FindCURL.cmake  FindGPerftools.cmake  FindProtobufWrapper.cmake  FindSpdlog.cmake  FindSphinx.cmake  FindTileDB.cmake  Findhtslib.cmake  Findlibuuid.cmake  SetCatch2Version.cmake
docs/: CMakeLists.txt  Doxyfile  api.rst  conf.py  index.rst  omicsds.rst  storage.rst  utils.rst
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/cpp/api/: omicsds.cc  omicsds.h
src/main/cpp/loader/: omicsds_consolidate.h  omicsds_export.cc  omicsds_export.h  omicsds_loader.cc  omicsds_loader.h  omicsds_schema.h  omicsds_storage.h
src/main/cpp/omicsds/: omicsds_configure.cc  omicsds_configure.h  omicsds_consolidate.cc  omicsds_consolidate.h  omicsds_export.cc  omicsds_export.h  omicsds_loader.cc  omicsds_loader.h  omicsds_module.h  omicsds_schema.h  omicsds_storage.h
src/main/cpp/storage/: omicsds_storage.h  omicsds_tiledb_storage.cc  omicsds_tiledb_storage.h
src/main/cpp/utils/: omicsds_array_metadata.cc  omicsds_array_metadata.h  omicsds_encoder.cc  omicsds_encoder.h  omicsds_exception.h  omicsds_file_utils.cc  omicsds_file_utils.h  omicsds_import_config.cc  omicsds_import_config.h  omicsds_logger.cc  omicsds_logger.h  omicsds_message_wrapper.cc  omicsds_message_wrapper.h  omicsds_samplemap.cc  omicsds_samplemap.h  omicsds_status.h
src/resources/: CMakeLists.txt  omicsds_array_metadata.proto  omicsds_import_config.proto
src/test/: CMakeLists.txt
src/test/cpp/: CMakeLists.txt  catch.h  test_api.cc  test_base.h  test_driver.cc  test_encoder.cc  test_file_utility.cc  test_logger.cc  test_matrix_loader.cc  test_message_wrapper.cc  test_omics_field_data.cc  test_omicsds_cli.cc  test_omicsds_configure.cc  test_omicsds_import_config.cc  test_omicsds_loader.cc
src/test/inputs/: .gitignore  18k-1000-ws.tgz
src/test/inputs/OmicsDSTests/: README  s0.bed  s1.bed  sam_list  sam_map  sam_output0.sam  sam_output1.sam  small_list  small_map  small_matrix_list  small_matrix_sorted_list  small_sorted.resort  test_matrix.sorted  test_matrix.unsorted  toy.sam  toy2.sam
src/test/inputs/feature-level-ws/array/: __array_schema.tdb  omics_schema
src/test/inputs/feature-level-ws/array/__B2A5D668-37CA-414D-933B-2A9EDC76C16A4743988736_1660683102897/: SCORE.tdb  __coords.tdb
src/test/inputs/interval-level-ws/array/: __array_schema.tdb  omics_schema
src/test/inputs/interval-level-ws/array/__43de9a3b-7bcc-48f2-a41c-6a7c27deb3cc140643120204096_1657755286723/: CHROM.tdb  CHROM_var.tdb  END.tdb  GENE.tdb  GENE_var.tdb  NAME.tdb  NAME_var.tdb  SAMPLE_NAME.tdb  SAMPLE_NAME_var.tdb  SCORE.tdb  START.tdb  __coords.tdb
tools/: CMakeLists.txt  cli_utils.cc  import.cc  omicds.cc  omicsds_cli.h  query.cc
tools/main/: CMakeLists.txt  cli_utils.cc  configure.cc  consolidate.cc  import.cc  omicsds.cc  omicsds_cli.h  omicsds_cli_constants.h  query.cc
tools/test/: CMakeLists.txt  test_cli.sh
tools/test/cpp/: CMakeLists.txt  test_driver.cc  test_import_config.cc  test_omicsds_cli.cc
tools/test/inputs/: small_map
