[build-system]
requires = ["setuptools~=67.5", "wheel~=0.34", "cython~=3.0", "numpy~=1.24"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.cibuildwheel]
# linux uses manylinux2014 as default which uses Centos 7 image
manylinux-x86_64-image = "manylinux2014"
