#
# CMakeLists.txt
#
# The MIT License
#
# Copyright (c) 2022 Omics Data Automation, Inc.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#

set(CLI_CPP_SOURCES
  omicsds.cc
  configure.cc
  consolidate.cc
  import.cc
  query.cc
  cli_utils.cc)

add_executable(omicsds ${CLI_CPP_SOURCES})

target_include_directories(omicsds PRIVATE
  ${CMAKE_SOURCE_DIR}/src/main/cpp/api
  ${CMAKE_SOURCE_DIR}/src/main/cpp/omicsds
  ${CMAKE_SOURCE_DIR}/src/main/cpp/utils
  ${CMAKE_SOURCE_DIR}/src/main/cpp/storage
  )

target_link_libraries(omicsds omicsds_static)

if(USE_GPERFTOOLS AND GPERFTOOLS_FOUND)
  target_link_libraries(omicsds ${GPERFTOOLS_PROFILER_LIBRARY})
endif()
if(USE_GPERFTOOLS_HEAP AND GPERFTOOLS_FOUND)
  target_link_libraries(omicsds ${GPERFTOOLS_HEAP_PROFILER_LIBRARY})
endif()
